<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44sp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        android:id="@+id/parkingmeter_textview_title"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:background="@color/color_silver"
        android:textAllCaps="true"
        android:text="@string/parkingmeter_title"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/parkingmeter_image"
        android:layout_below="@id/parkingmeter_textview_title"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/car"
        />

    <TextView
        android:id="@+id/parkingmeter_plateno"
        android:layout_below="@id/parkingmeter_image"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:layout_height="46sp"
        android:background="@drawable/list_item_tag_background"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:gravity="center"
        android:textAlignment="center"
        android:text="ABC-1234"
        />

    <Button
        android:id="@+id/parkingmeter_button_unpark"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        style="@style/ButtonDefault"
        android:text="@string/parkingmeter_button_unpark"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/parkingmeter_plateno"
        android:layout_above="@id/parkingmeter_button_unpark"
        android:layout_marginTop="16dp"
        android:id="@+id/parkingmeter_gridlayout"
        android:background="@color/color_silver"
        android:rowCount="4"
        android:columnCount="1"
        android:padding="10dp"
        >
        <TextView
            android:layout_row="0"
            android:layout_rowWeight="2"
            android:layout_column="0"
            android:layout_columnWeight="0.5"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/color_silver_darker"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:text="@string/parkingmeter_park_date"
            android:textColor="@color/color_dark_text"
            android:fontFamily="sans-serif"
            />
        <TextView
            android:id="@+id/parkingmeter_text_parktime"
            android:layout_row="1"
            android:layout_rowWeight="2"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:textSize="16sp"
            android:textColor="@color/color_blue"
            android:text="00:00 PM DD/MM/AAAA"
            />
        <TextView
            android:layout_row="2"
            android:layout_rowWeight="2"
            android:layout_column="0"
            android:background="@color/color_silver_darker"
            android:layout_columnWeight="0.5"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:gravity="center_vertical|center_horizontal"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/parkingmeter_fee"
            android:textColor="@color/color_dark_text"
            android:fontFamily="sans-serif"
            />
        <TextView
            android:id="@+id/parkingmeter_text_fee"
            android:layout_rowWeight="6"
            android:gravity="center"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:text="$0"
            android:textColor="@color/color_blue"
            />

    </GridLayout>

</RelativeLayout>